--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "json-server": "^0.17.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/react-virtualized": "^9.21.21",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
